--- a/AI.ipynb
+++ b/AI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNs6syxjLzosRAnNlV4pkLd",
+      "authorship_tag": "ABX9TyOgid/75fbxZrsulqBK5BcJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -409,6 +409,49 @@
       ],
       "metadata": {
         "id": "tUKYWwoLy13e"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Association Rule Mining\n",
+        "\n",
+        "from mlxtend.preprocessing import TransactionEncoder\n",
+        "from mlxtend.frequent_patterns import apriori , association_rules\n",
+        "import pandas as pd\n",
+        "from matplotlib import pyplot as plt\n",
+        "\n",
+        "transactions = [\n",
+        "    ['orange', 'lemon', 'banana'],\n",
+        "    ['orange', 'coconut'],\n",
+        "    ['lemon', 'coconut'],\n",
+        "    ['orange', 'lemon', 'coconut'],\n",
+        "    ['orange', 'banana'],\n",
+        "]\n",
+        "\n",
+        "te = TransactionEncoder()\n",
+        "te_array = te.fit(transactions).transform(transactions)\n",
+        "df = pd.DataFrame(te_array , columns = te.columns_)\n",
+        "\n",
+        "frequent_items = apriori(df , min_support=0.2 , use_colnames=True)\n",
+        "\n",
+        "association_rules =  association_rules(frequent_items , metric='confidence' , min_threshold=0.5)\n",
+        "\n",
+        "print(\"Frequent Itemsets:\")\n",
+        "print(frequent_items)\n",
+        "print(\"\\n\\nAssociation Rules:\")\n",
+        "print(association_rules)\n",
+        "\n",
+        "plt.barh(range(len(frequent_items)) , frequent_items['support'] , align='center')\n",
+        "plt.yticks(range(len(frequent_items)) , frequent_items['itemsets'].apply(lambda x:','.join(x)))\n",
+        "plt.xlabel('Support')\n",
+        "plt.title('Frequent Items')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "BoZXXr6jJNxy"
       },
       "execution_count": null,
       "outputs": []
