--- a/AI.ipynb
+++ b/AI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgid/75fbxZrsulqBK5BcJ",
+      "authorship_tag": "ABX9TyO93OcdEfOQHFyuShnlEO94",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,159 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/MU2324/AI/blob/main/AI.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "6T-Sd6pSLRCQ"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -238,30 +391,44 @@
         "#SVM\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
-        "from sklearn.svm import SVC\n",
+        "from sklearn import datasets\n",
+        "from sklearn import svm\n",
         "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.svm import SVC\n",
         "from sklearn.metrics import accuracy_score\n",
         "\n",
-        "# Load your dataset from a local file (e.g., CSV)\n",
-        "# Replace 'your_dataset.csv' with the actual path to your dataset file\n",
-        "iris = load_iris()\n",
+        "# Load the iris dataset as an example\n",
+        "iris = datasets.load_digits()\n",
         "X = iris.data\n",
         "y = iris.target\n",
-        "# Split the dataset into a training set and a testing set\n",
+        "\n",
+        "print(X)\n",
+        "print(\"========================\")\n",
+        "print(y)\n",
+        "\n",
+        "# Split the data into training and testing sets\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
         "\n",
         "# Create an SVM classifier\n",
-        "svm_classifier = SVC(kernel='linear')  # You can choose different kernels here\n",
+        "cls = svm.SVC(kernel=\"linear\")\n",
+        "X_train,y_train =iris.data[:-10],iris.target[:-10]\n",
         "\n",
-        "# Fit the classifier to the training data\n",
-        "svm_classifier.fit(X_train, y_train)\n",
+        "# Train the classifier on the training data\n",
+        "cls.fit(X_train, y_train)\n",
         "\n",
-        "# Make predictions on the test data\n",
-        "y_pred = svm_classifier.predict(X_test)\n",
+        "# Make predictions on the testing data\n",
+        "y_pred = cls.predict(X_test)\n",
         "\n",
-        "# Calculate the accuracy of the model\n",
+        "print(cls.predict(iris.data[:-10]))\n",
+        "\n",
+        "# Evaluate the accuracy of the classifier\n",
+        "\n",
         "accuracy = accuracy_score(y_test, y_pred)\n",
-        "print(f\"Accuracy: {accuracy}\")"
+        "print(f\"Accuracy: {accuracy}\")\n",
+        "\n",
+        "plt.imshow(iris.images[9], interpolation='nearest')\n",
+        "plt.show()\n",
+        "\n"
       ],
       "metadata": {
         "id": "XuJHgT_1jYlH"
